Tue May 21 17:13:40 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: fix to collect additional information for GC::Profiler.
	  * major/minor GC
	  * trigger reason of GC

	* gc.c (gc_profile_dump_on): change reporting format with
	  added information.

	* gc.c (gc_profile_record_get): return added information by
	  :GC_FLAGS => array.

Tue May 21 16:45:31 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: GC::Profiler's sweeping time is accumulated all slot
	  sweeping time. At lazy GC, GC::Profiler makes new record entry
	  for each lazy_sweep(). In this change, accumulating all
	  slot_sweep() time.
	  And change indentation.

Tue May 21 16:29:09 2013  Koichi Sasada  <ko1@atdot.net>

	* common.mk (rdoc-bench): add a benchmark rule
	  using RDoc. Generate all rdoc related files
	  (same as `make rdoc') in temporary directory
	  and remove them. Excecution time, GC::Profiler
	  and results of GC.stat are printed.

	* tool/rdocbench.rb: added for `rdoc-bench'.

Tue May 21 16:25:05 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_profile_dump_on): `count' should be (int) because it
	  can be negative number.
	  And use pointer for `record' (don't copy).

Tue May 21 03:11:18 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (dir_each): compose HFS file names from
	  UTF8-MAC. [ruby-core:48745] [Bug #7267]

Tue May 21 03:08:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/envutil.rb (assert_separately): require envutil in the
	  child process too.

Tue May 21 03:07:26 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_conv_enc_opts): should infect.

Mon May 20 22:24:45 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb (Set#delete_if, Set#keep_if): Avoid blockless call of
	  proc, which is not portable to JRuby.  Replace &method() with
	  faster and simpler literal blocks while at it.

Mon May 20 22:00:31 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/e2mmap.rb: Format of E2MM documentation
